Modifying the resource add function(Using mysql)

--- a/oneM2MTester/TestingView.ejs
+++ b/oneM2MTester/TestingView.ejs
@@ -94,14 +94,6 @@
             width: 635px;
         }
 
-        .resourceName {
-            margin-bottom: 10px;
-            margin-top: 10px;
-            width: auto;
-            height: auto;
-            background: #ffaaff;
-        }
-
         .innertube {
             margin: 15px; /* Provides padding for the content */
         }
@@ -140,12 +132,11 @@
         $(function () {
 
             // Creating a resource with RandomValue;
-
             $('#createResource').click(function() {
 
                 var resourceTitle = prompt('리소스의 이름을 입력하세요', '예) AE 리소스 생성');
                 var resourceName = Math.floor(Math.random() * 10000000); // randomValue for create resource name
-                var params = "resourceName = " + resourceName;
+                var params = "resourceName=" + resourceName + "&" + "resourceTitle=" + resourceTitle;
 
                 $.ajax({
                     url: "http://127.0.0.1:62590/createResource",
@@ -155,9 +146,16 @@
                     timeout: 30000,
                     data : params,
                     success: function (data) {
-                        // 리소스 네임으로 리소스 애트리뷰트 만들기
 
+                        // Creating a resource list with resourceName
+                        var resourceListRoot = $('#resourceList');
 
+                        // Constructing the resource list
+                        var resourceElement = $("<div>");
+                        resourceElement.attr({'id': resourceName});
+                        resourceElement.html(resourceTitle);
+
+                        resourceListRoot.append(resourceElement); // Adding the element to root */
                     },
                     error: function (xhr, textStatus, errorThrown) {
                         alert(textStatus + ' : ' + xhr);
@@ -207,7 +205,7 @@
                         $('#bodyText2').val(data);
                     },
                     error: function (xhr, textStatus, errorThrown) {
-                        alert(textStatus + ': ' + xhr);
+                        alert(textStatus + ': ' + xhr + '/' + 'Please try again!!');
                     }
                 });
             });
@@ -232,88 +230,76 @@
 </head>
 
 <body>
+    <header id="header">
+        <div id="logo">
+            <h1> oneM2M Web Testing </h1>
+        </div>
+    </header>
 
-<header id="header">
-    <div id="logo">
-        <h1> oneM2M Web Testing </h1>
-    </div>
-</header>
-
-<main>
-    <span id="testingFormat">
-    <div id="urlInfo">
-      <span id="methodSelection">
-        <select id="methodList">
-            <option value="GET"> GET</option>
-            <option value="POST"> POST</option>
-            <option value="PUT"> PUT</option>
-            <option value="DELETE"> DELETE</option>
-        </select>
-      </span>
+    <main>
+        <span id="testingFormat">
+        <div id="urlInfo">
+            <span id="methodSelection">
+                <select id="methodList">
+                    <option value="GET"> GET</option>
+                    <option value="POST"> POST</option>
+                    <option value="PUT"> PUT</option>
+                    <option value="DELETE"> DELETE</option>
+                </select>
+            </span>
       
-      <span id="url">
-        <input type="text" id="setURL"/>
-      </span>
+            <span id="url">
+                <input type="text" id="setURL"/>
+            </span>
       
-      <span>
-        <input type="Button" value="Send" id="request"/>
-      </span>
-    </div>
-
-    <div id="headerInfo">
-
-        <div id="headerControl">
-        <span>
-          <input type="Button" value="Add" id="addHeader"/>
-        </span>
+            <span>
+                <input type="Button" value="Send" id="request"/>
+            </span>
         </div>
 
-        <div id="headerList">
-            <div id="headerElement">
-              <span>
-                <input type="text" class="headerName"/>
-                <input type="text" class="headerValue"/>
-              </span>
+        <div id="headerInfo">
+            <div id="headerControl">
+                <span>
+                    <input type="Button" value="Add" id="addHeader"/>
+                </span>
+            </div>
+
+            <div id="headerList">
+                <div id="headerElement">
+                    <span>
+                        <input type="text" class="headerName"/>
+                        <input type="text" class="headerValue"/>
+                    </span>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div id="bodyInfo">
-        <textarea id="bodyText" rows="30" cols="87" style="resize:none"> </textarea>
-
-
-    </div>
+        <div id="bodyInfo">
+            <textarea id="bodyText" rows="30" cols="87" style="resize:none"> </textarea>
+        </div>
         </span>
-    <span id="responseFormat">
-        <div id="bodyInfo2">
-            <textarea id="bodyText2" rows="30" cols="87" style="resize:none"> </textarea>
 
-
-        </div>
-    </span>
-</main>
-
-<nav id="nav">
-    <div class="innertube">
-        <h1> Resource List </h1>
-         <span>
-            <input type="button" value="+ Resource" id="createResource"/>
-            <input type="button" value="- Resource" id="deleteResource"/>
+        <span id="responseFormat">
+            <div id="bodyInfo2">
+                <textarea id="bodyText2" rows="30" cols="87" style="resize:none"> </textarea>
+            </div>
         </span>
-    </div>
+    </main>
 
-    <div class="innertube">
+    <nav id="nav">
+        <div class="innertube">
+            <h1> Resource List </h1>
+            <span>
+                <input type="button" value="+ Resource" id="createResource"/>
+                <input type="button" value="- Resource" id="deleteResource"/>
+            </span>
+        </div>
 
-        <div id="AE_Create">
-            AE 리소스 생성
+        <% for(var i = 0; i < 5; i++) { %>
+        <div id= <%= i %> class="targetEvent" class="innertube">
+            <input type="button" value="+ Resource"/>
         </div>
-        <div id="resourceName2">
-            AE 리소스 생성
-        </div>
-        <div id="resourceName3">
-            AE 리소스 생성
-        </div>
-    </div>
-</nav>
-</body>
+        <% } %>
+    </nav>
+    </body>
 </html>
